# e2enav

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt
config/: data_collection.yaml  params.yaml  training.yaml
config/models/: simple_imitation_model.pt  simple_imitation_model_100ep.pt  simple_imitation_model_10ep.pt  simple_imitation_model_110ep.pt  simple_imitation_model_120ep.pt  simple_imitation_model_130ep.pt  simple_imitation_model_140ep.pt  simple_imitation_model_150ep.pt  simple_imitation_model_20ep.pt  simple_imitation_model_30ep.pt  simple_imitation_model_40ep.pt  simple_imitation_model_50ep.pt  simple_imitation_model_60ep.pt  simple_imitation_model_70ep.pt  simple_imitation_model_80ep.pt  simple_imitation_model_90ep.pt
include/e2enav/: inference_node.hpp  visibility_control.h
launch/: data_collection.launch.py  inference.launch.py
logs/training_result/: events.out.tfevents.1753358546.kyo-B760M-Pro-RS-D4-WiFi.94464.0  events.out.tfevents.1753359264.kyo-B760M-Pro-RS-D4-WiFi.94782.0  events.out.tfevents.1753359433.kyo-B760M-Pro-RS-D4-WiFi.96587.0  events.out.tfevents.1753360040.kyo-B760M-Pro-RS-D4-WiFi.99389.0  events.out.tfevents.1753360504.kyo-B760M-Pro-RS-D4-WiFi.101616.0  events.out.tfevents.1753360997.kyo-B760M-Pro-RS-D4-WiFi.104675.0  events.out.tfevents.1753361193.kyo-B760M-Pro-RS-D4-WiFi.106923.0  events.out.tfevents.1753361378.kyo-B760M-Pro-RS-D4-WiFi.108963.0  training_stats.json  (+7 more)
scripts/: data_collect.py  network.py  test_horizontal_crop.py  test_inference_preprocessing.py  train.py
src/: inference_node.cpp
(+3 files in other folders)
